--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <link href="/css/layout.css" type="text/css">
+      <link href="/css/layout.css" type="text/css" rel="stylesheet">
       <title>isaacneptune</title>
    </head>
    <body>
