--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
       <title>isaacneptune</title>
    </head>
    <body>
-     <p>hello!</p>
+     <div id="posterwall">
+         <div class="poster 1"><img src="#"></div>
+         <div class="poster 2"><img src="#"></div>
+         <div class="poster 3"><img src="#"></div>
+         <div class="poster 4"><img src="#"></div>
+     </div>
    </body>
 </html>
